fixed product functions RASD

--- a/RASD/Files/introduction.tex
+++ b/RASD/Files/introduction.tex
@@ -47,6 +47,7 @@ According to the paper "The World and the Machine" by M.Jackson and P.Zave, in o
 \begin{table}[H]
     \rowcolors{3}{blue!15}{white}
     \vspace{-3cm}
+    \hspace{-0.4cm}
     \begin{tabular}{|p{9.5cm}|p{2cm}|p{1.5cm}|}
         \hline
         \rowcolor{blue!50}
@@ -140,7 +141,7 @@ According to the paper "The World and the Machine" by M.Jackson and P.Zave, in o
 \end{itemize}
 \subsection{Revision History}
 \begin{itemize}
-    \item \today: version 1.0 (first release)
+    \item 22 December 2023, version 1.0: first release
 \end{itemize}
 \subsection{Reference Documents}
 \begin{itemize}
