updated battle creation function RASD

--- a/RASD/Files/overview.tex
+++ b/RASD/Files/overview.tex
@@ -60,7 +60,7 @@ This functionality is available only to students. In order to subscribe to a new
 
 At this point the student can refine his/her search or select the right tournament from the list and, by doing this, subscribe to it.
 \subsubsection{Create a battle}
-This functionality is available only to educators. An educator can select an active tournament from the page showing the list of the tournaments he/she has access to: inside the new page that is displayed educators can find data relative to the tournament (e.g. the state of the tournament and how much time before the next) and the students subscribed to it (e.g. actual ranking and list of subscribed students) and also a button that allows them to create a new code kata battle.
+This functionality is available only to educators. An educator can select an active tournament from the page showing the list of the tournaments he/she has access to: inside the new page that is displayed educators can find data relative to the tournament (e.g. the state of the tournament) and the students subscribed to it (e.g. actual ranking and list of subscribed students) and also a button that allows them to create a new code kata battle.
 
 By clicking it, the user is brought to a new webpage in which has to provide multiple information:
 \begin{itemize}
