--- a/RASD/Files/alloy.tex
+++ b/RASD/Files/alloy.tex
@@ -2,7 +2,7 @@ An Alloy model is provided to present a formal description of the system.
 The goals of this kind of analysis are to check the consistency of the model and to find possible errors and corner cases in the requirements.\\
 A formal model is also useful to express complex facts which are not captured by the domain class diagram such as the constraints involving subcriptions, scores, timestamps, battle and tournament states.\\ \\
 
-\subsection{Model Code}
+\subsection{Model definition}
 \begin{lstlisting}[language=alloy]
 open util/integer
 
@@ -477,7 +477,7 @@ pred world2{
 run world1  for 6
 \end{lstlisting}
 
-\subsection{Static analysis}
+\subsection{Static model analysis}
 \begin{lstlisting}[language=alloy]
 //Check that all students enrolled in the tournament have 0 tournament score during subcription phase
 assert StudentTournamentScoreBeforeStart{
