--- a/RASD/Files/introduction.tex
+++ b/RASD/Files/introduction.tex
@@ -13,8 +13,8 @@ CodeKataBattle aims to fill these gaps by facilitating competitive programming c
  \label{goals}
  The main objectives of our system are the following:
  \begin{enumerate}[label=$\bullet$ \textbf{G\arabic*:}]
-     \item \textbf{ Allow students to participate to collaborative programming challenges}\\This is the main goal of the system. Students will be able to form teams to partecipate to Code Kata Battles and collaborate through GitHub.
-     \item \textbf{ Allow educators to create programming challenges}\\Educators (and only them) are allowed to create tournaments, which are composed by a non predefined number of programming challenges called Code Kata Battles. Whenever a new tournament is created, all the students of the platform are notified and can partecipate to it. After the creation of a tournament, the educator can add collaborators that will help him in the management of the tournament. Both the creator of the tournament and the collaborators that are invited to it can create challenges within the context of a tournament.
+     \item \textbf{ Allow students to participate to collaborative programming challenges}\\This is the main goal of the system. Students will be able to form teams to partecipate to challenges and collaborate through GitHub.
+     \item \textbf{ Allow educators to create programming challenges}\\Educators (and only them) are allowed to create tournaments, which are composed by a non predefined number of challenges. Whenever a new tournament is created, all the students of the platform are notified and can partecipate to it. After the creation of a tournament, the educator can add collaborators that will help him in the management of the tournament. Both the creator of the tournament and the collaborators that are invited to it can create challenges within the context of a tournament.
      \item \textbf{ Allow the system to automatically evaluate students' submissions}\\Students submissions are automatically analyzed and ranked by the system, combining functional aspects, timeliness and quality level of sources. Functional aspects are measured in terms of number of unit test cases passed out of all test cases. Timeliness instead is measured in terms of elapsed time passed since the start of the battle. Finally, quality level of sources is measured in terms of code quality, whose aspects can be selected by the educator at battle creation time, and is computed by integrating with static analysis tools.
      \item \textbf{ Allow educators to manually evaluate students' submissions}\\Educators will have the possibility to enable manual evaluation of students' submissions for a battle. If the option is enabled, the educator who created the battle, at the end of the submission phase of a battle, can review the code of all the teams and assign a score. In this case, the system will combine the automatically computed score with the manual one to produce the final battle rank.
      \item \textbf{ Allow students to track their performance}\\Teams will be able to see their current rank evolving during the battle, updated for each new submission. Additionally, at the end of each battle, the platform updates a personal tournament score of each student, that is the sum of all battle scores received in that tournament. This score is used to compute the ranking of students partecipating to the tournament. In this way, the student can track his performance during the tournament as well.
@@ -22,7 +22,7 @@ CodeKataBattle aims to fill these gaps by facilitating competitive programming c
 \newpage
  %--------------------------------------
 \subsection{Scope}
-The Code Kata Battle (CKB) platform aims at providing a collaborative environment for students to enhance their software development skills through structured practice sessions called "code kata battles". CKB facilitates an engaging learning experience by enabling students to partecipate in friendly competition while refining their programming skills.
+The CodeKataBattle (CKB) platform aims at providing a collaborative environment for students to enhance their software development skills through structured practice sessions called "\textit{Code Kata Battles}". CKB facilitates an engaging learning experience by enabling students to partecipate in friendly competition while refining their programming skills.
 
 The system should allow 2 types of accesses, one for \textbf{educators} and the other for normal \textbf{students}: educators will have the possibility to create \textbf{tournaments} and \textbf{battles}, while students will have the possibility to subscribe to tournaments and provide solutions for the battles that compose them.
 
