DD outline and listed component interfaces

--- a/DD/Files/architectural.tex
+++ b/DD/Files/architectural.tex
@@ -134,6 +134,108 @@ The most important aspects that are worth noticing are:
 \end{itemize}
 
 \subsection{Component interfaces}
+In this section the interfaces of the components of the system are described. The interfaces are described in terms of the operations they offer and the parameters they require and return.\\
+
+\begin{itemize}
+    \item \textbf{APIGatewayI}
+    \begin{itemize}
+        \item 
+    \end{itemize}
+    \item \textbf{CommitI}
+    \begin{itemize}
+        \item 
+    \end{itemize}
+    \item \textbf{Auth2GatewayI}
+    \begin{itemize}
+        \item 
+    \end{itemize}
+    \item \textbf{Tournament2GatewayI}
+    \begin{itemize}
+        \item 
+    \end{itemize}
+    \item \textbf{Tournament2EventI}
+    \begin{itemize}
+        \item 
+    \end{itemize}
+    \item \textbf{Tournament2EvaluationI}
+    \begin{itemize}
+        \item 
+    \end{itemize}
+    \item \textbf{TournamentModelI}
+    \begin{itemize}
+        \item 
+    \end{itemize}
+    \item \textbf{PushEventI}
+    \begin{itemize}
+        \item 
+    \end{itemize}
+    \item \textbf{PullEventI}
+    \begin{itemize}
+        \item 
+    \end{itemize}
+    \item \textbf{CreateRepositoryI}
+    \begin{itemize}
+        \item 
+    \end{itemize}
+    \item \textbf{RetrieveSubmissionCodeI}
+    \begin{itemize}
+        \item 
+    \end{itemize}
+    \item \textbf{PullSubmissionI}
+    \begin{itemize}
+        \item 
+    \end{itemize}
+    \item \textbf{PushSubmissionI}
+    \begin{itemize}
+        \item 
+    \end{itemize}
+    \item \textbf{Auth2TournamentI}
+    \begin{itemize}
+        \item 
+    \end{itemize}
+    \item \textbf{Auth2GatewayI}
+    \begin{itemize}
+        \item 
+    \end{itemize}
+    \item \textbf{UserModelI}
+    \begin{itemize}
+        \item 
+    \end{itemize}
+    \item \textbf{PushNotificationI}
+    \begin{itemize}
+        \item 
+    \end{itemize}
+    \item \textbf{PullNotificationI}
+    \begin{itemize}
+        \item 
+    \end{itemize}
+    \item \textbf{RegistryI}
+    \begin{itemize}
+        \item 
+    \end{itemize}
+\end{itemize}
+
+The system's components will exploit the following APIs, provided by already existing services or components:
+\begin{itemize}
+    \item \textbf{TournamentDBMS API}: 
+    \item \textbf{UserDBMS API}: 
+    \item \textbf{GitHub API}: 
+    \item \textbf{StaticAnalysis API}: 
+    \item \textbf{Email API}:
+    \item \textbf{SSO API}:
+\end{itemize}
+
+
+
+
+
+
+
+
+
+
+
+
 \subsection{Runtime view}
 \subsection{Selected architectural styles and patterns}
 \subsection{Other design decisions}
