--- a/DD/dd.tex
+++ b/DD/dd.tex
@@ -101,6 +101,16 @@
 \input{Files/interface.tex}
 %------------------------------------------------------------------------------------------------------------------------------------------------
 \clearpage
+{{\section{Requirements traceability}}}
+\label{sect:requirements_traceability}
+\input{Files/req_trac.tex}
+%------------------------------------------------------------------------------------------------------------------------------------------------
+\clearpage
+{{\section{Implementation, Integration and Test Plan}}}
+\label{sect:implementation}
+\input{Files/implementation.tex}
+%------------------------------------------------------------------------------------------------------------------------------------------------
+\clearpage
 {{\section{Effort Spent}}}
 \label{sect:effort}
 \input{Files/effort}
