changed layout component view DD

--- a/DD/Files/architectural.tex
+++ b/DD/Files/architectural.tex
@@ -19,18 +19,20 @@ The main elements contained in Figure \ref{overview_diagram} are:
     \item \textbf{CKB Distributed System} which is the distributed system composed of multiple microservices that implement the core functionalities of the system. Its in charge of the data management, application and integration logic of the whole CKB platform.
     \item \textbf{External Entities} the CKB Distributed System must be able to integrate with to accomplish its functionalities. The arrow in the diagram highlights the direction of the interaction between the system and the external entities.
 \end{itemize}
+
 \subsection{Component view}
-The following component diagram highlights the main components of the system and their interaction with external entities and services. In the diagram, the components have 
-been organized to highlight the logical grouping of the system elements.\\The WebApplication component represents the presentation layer of the system, being the only entry point for the users.
-The application and integration logics are represented together due to their tight interaction, while the data layer contains the databases accessed by the respective microservices.
-Different colors are used to highlight components that share similar roles in the system.\\ \textcolor{orange}{Orange} components represent the system's microservices. Some complex microservices have been further decomposed into subcomponents, for a more fine grained representation.\\
-\textcolor{myyellow}{Yellow} components represent the model of the database accessed by its microservice. The model offers to the microservice an abstraction of the database, allowing it to access the data without knowing the underlying database implementation technology.\\ 
-The \textcolor{violet}{violet} has been used to highlight components or services that cover an important role for the communication between microservices. It has been used for the queues subcomponents, which are used to implement the asynchronous and concurrent communication between specific microservices.
-Also the ServiceRegistry has been represented with the this color, since it enables the communication in the system.
-Some microservices have an important role in the integration and communication with external entities as well, but have been depicted with their orange color used for microservices. This aspect will be clarified in the detailed description of the components that follows the diagram.\\
-\textcolor{red}{Red} components represent the external services that interact with the system.\\
-Finally, the \textcolor{mygreen}{green} color has been used to highlight the databases components that are used to store the data of the system.\\
-It's important to notice that for the sake of simplicity and readability, the interface offered by the ServiceRegistry has been depicted with some dotted arrows that connect all the microservices to it.
+The following component diagram highlights the main components of the system and their interaction with external entities and services. In the diagram, the components have been organized to highlight the logical grouping of the system elements.
+
+The WebApplication component represents the presentation layer of the system, being the only entry point for the users. The application and integration logics are represented together due to their tight interaction, while the data layer contains the databases accessed by the respective microservices.
+
+Different colors are used to highlight components that share similar roles in the system.
+\begin{itemize}
+    \item \textcolor{orange}{Orange} components represent the system's microservices. Complex microservices have been further decomposed into subcomponents, for a more fine grained representation. Some microservices have an important role in the integration and communication with external entities as well, but have been depicted with their orange color used for microservices. This aspect will be clarified in the detailed description of the components that follows the diagram.
+    \item \textcolor{myyellow}{Yellow} components represent the model of the database accessed by its microservice. The model offers to the microservice an abstraction of the database, allowing it to access the data without knowing the underlying database implementation technology.
+    \item \textcolor{violet}{Violet} has been used to highlight components or services that cover an important role for the communication between microservices. It has been used for the queues subcomponents, which are used to implement the asynchronous and concurrent communication between specific microservices. Also the ServiceRegistry has been represented with the this color, since it enables the communication in the system. It's important to notice that for the sake of simplicity and readability, the interface offered by the ServiceRegistry has been depicted with some dotted arrows that connect all the microservices to it.
+    \item \textcolor{red}{Red} components represent the external services that interact with the system.
+    \item Finally, the \textcolor{mygreen}{green} color has been used to highlight the databases components that are used to store the data of the system.
+\end{itemize}
 
 \newpage
 \thispagestyle{noheader}
@@ -42,7 +44,6 @@ It's important to notice that for the sake of simplicity and readability, the in
     \label{component_diagram}
 \end{figure}
 
-\newpage
 The components in Figure \ref{component_diagram} are :
 \begin{itemize}
     \item \textbf{WebApplication}: the web app to which users of the CKB platform (students and educators) connect through a modern web browser. It is the front end of the system, and thanks to the interface offered by the \textbf{APIGatewayService}, allows users to manage and access the most important aspects of tournaments and battles.
@@ -119,6 +120,12 @@ The Figure \ref{component_diagram} contains also some external entities the syst
 The following diagram represents the deployment architecture of the system, highlighting the physical nodes on which the system will be deployed and the communication channels between them.
 
 In Figure \ref{deployment_diagram} the nodes have been colored according to the color scheme defined in the component view exception, with the only difference that the \textcolor{red}{red} color has been used to identify the user's web browser and the \textcolor{myyellow}{yellow} one to represent the system's web server.
+
+The most important aspects that are worth noticing are:
+\begin{itemize}
+    \item Queues are deployed on a single phisical node. As we can see from the artifacts, all queues are built over the same code but replicated in a way that each type of microservice uses its own: this should increase modularity and maintainability of the system. Moreover these queues are logged (i.e. also persisted in secondary memory) so that, in case of failure, a new service can be deployed and the previous state of the queue can be restored: this allows the system to be fault tolerant by ensuring that no communication data is lost.
+    \item Most of the microservices are deployed in a containerized environment, using Docker containers. This allows them to be easily deployed on necessity, allowing the system to scale out according to the current load. The Service Registry instead is deployed in a non-containerized environment, since it is a critical component of the system and it is important to ensure its availability. In particular, in order to achieve this, a master-slave approach has been chosen. The master instance is deployed on a physical node, while slave instances are deployed on different nodes: the latter ones have the task of monitoring the master instance and to copy its logs. In this way, if the master instance fails, one of the slave instances (e.g. chosen through a consensus algorithm) can be promoted to master so the system can continue to work from the point the master left without any interruption.
+\end{itemize}
 \begin{figure}[H]
     \centering
     \vspace{-4cm}
@@ -127,11 +134,6 @@ In Figure \ref{deployment_diagram} the nodes have been colored according to the 
     \caption{Deployment diagram}
     \label{deployment_diagram}
 \end{figure}
-The most important aspects that are worth noticing are:
-\begin{itemize}
-    \item Queues are deployed on a single phisical node. As we can see from the artifacts, all queues are built over the same code but replicated in a way that each type of microservice uses its own: this should increase modularity and maintainability of the system. Moreover these queues are logged (i.e. also persisted in secondary memory) so that, in case of failure, a new service can be deployed and the previous state of the queue can be restored: this allows the system to be fault tolerant by ensuring that no communication data is lost.
-    \item Most of the microservices are deployed in a containerized environment, using Docker containers. This allows them to be easily deployed on necessity, allowing the system to scale out according to the current load. The Service Registry instead is deployed in a non-containerized environment, since it is a critical component of the system and it is important to ensure its availability. In particular, in order to achieve this, a master-slave approach has been chosen. The master instance is deployed on a physical node, while slave instances are deployed on different nodes: the latter ones have the task of monitoring the master instance and to copy its logs. In this way, if the master instance fails, one of the slave instances (e.g. chosen through a consensus algorithm) can be promoted to master so the system can continue to work from the point the master left without any interruption.
-\end{itemize}
 
 \subsection{Component interfaces}
 In this section the interfaces of the components of the system are described. The interfaces are described in terms of the operations they offer and the parameters they require and return.\\
