updated deployment view description DD

--- a/DD/Files/architectural.tex
+++ b/DD/Files/architectural.tex
@@ -121,10 +121,11 @@ The following diagram represents the deployment architecture of the system, high
 
 In Figure \ref{deployment_diagram} the nodes have been colored according to the color scheme defined in the component view exception, with the only difference that the \textcolor{red}{red} color has been used to identify the user's web browser and the \textcolor{myyellow}{yellow} one to represent the system's web server.
 
-The most important aspects that are worth noticing are:
+Important aspects that are worth noticing are:
 \begin{itemize}
     \item Queues are deployed on a single phisical node. As we can see from the artifacts, all queues are built over the same code but replicated in a way that each type of microservice uses its own: this should increase modularity and maintainability of the system. Moreover these queues are logged (i.e. also persisted in secondary memory) so that, in case of failure, a new service can be deployed and the previous state of the queue can be restored: this allows the system to be fault tolerant by ensuring that no communication data is lost.
-    \item Most of the microservices are deployed in a containerized environment, using Docker containers. This allows them to be easily deployed on necessity, allowing the system to scale out according to the current load. The Service Registry instead is deployed in a non-containerized environment, since it is a critical component of the system and it is important to ensure its availability. In particular, in order to achieve this, a master-slave approach has been chosen. The master instance is deployed on a physical node, while slave instances are deployed on different nodes: the latter ones have the task of monitoring the master instance and to copy its logs. In this way, if the master instance fails, one of the slave instances (e.g. chosen through a consensus algorithm) can be promoted to master so the system can continue to work from the point the master left without any interruption.
+    \item Most of the architecture is deployed within Docker containers, providing a lightweight and scalable environment. Each instance of a microservice, instantiated as a separate container, follows a \textbf{thread-per-request model} to handle multiple incoming requests concurrently. This design choice optimizes resource utilization and responsiveness, allowing each microservice instance to efficiently manage concurrent requests through the creation of dedicated threads. The use of Docker ensures portability and consistency across different environments, enabling seamless deployment and scaling.\\ 
+          The Service Registry instead is deployed in a non-containerized environment, since it is a critical component of the system and it is important to ensure its availability. In particular, in order to achieve this, a \textbf{master-slave schema} is used. The master instance is deployed on a different physical node with respect to other slave instances (only one in Figure \ref{deployment_diagram}): these have the task of monitoring the master instance and to copy its logs. In this way, if the master instance fails, one of the slave instances (e.g. chosen through a consensus algorithm) can be promoted to master so the system can continue to work from the point it left without any significant interruption.
 \end{itemize}
 \begin{figure}[H]
     \centering
