added new revision for RASD

--- a/RASD/Files/introduction.tex
+++ b/RASD/Files/introduction.tex
@@ -139,10 +139,14 @@ According to the paper "The World and the Machine" by M.Jackson and P.Zave, in o
     \item {\textbf{Rn:} Requirement number “n”}
     \item {\textbf{UCn:} Use Case number “n”}
 \end{itemize}
+
+\newpage
 \subsection{Revision History}
 \begin{itemize}
-    \item 22 December 2023, version 1.0: first release
+    \item December 22, 2023: version 1.0 (first release)
+    \item \today: version 2.0 (fixed some typos)
 \end{itemize}
+
 \subsection{Reference Documents}
 \begin{itemize}
     \item Specification document: "Assignment RDD AY 2023-2024"
