--- a/RASD/Files/requirements.tex
+++ b/RASD/Files/requirements.tex
@@ -603,7 +603,7 @@ The main requirements the system has to fulfill are the following:
         \textbf{Exit conditions} &
         \begin{itemize}
             \item Student is correctly enrolled into the battle with its new team
-            \item System generates a unique invite API token and invite code valid for the team
+            \item System generates a unique API token and an invite code for the team
             \item The battle’s page now shows a “Your team” button to manage the team settings
         \end{itemize} \\
         \hline
